# pxblat

./: .all-contributorsrc  .clang-format  .cz.toml  .gitignore  .pdm-python  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MIGRATION_POETRY_TO_UV.md  Makefile  README.md  all_includes.hpp  binder.cfg  build.py  noxfile.py  pyproject.toml  requirements.txt  setup.py  tasks.py  test_gevent.py
.github/: labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: constraints.txt  docker.yml  pr_agent.yml  release.yml  tests.yml
.github/workflows/scripts/: find_lib.py
benchmark/data/: chr20.fa.fai
benchmark/fas/: chr20_10815100_10817410.fa  chr20_1111176_1112831.fa  chr20_11253087_11254915.fa  chr20_11399422_11401237.fa  chr20_11639430_11641175.fa  chr20_12605319_12606971.fa  chr20_12906343_12908335.fa  chr20_13033294_13035107.fa  chr20_13545370_13547154.fa  chr20_13972488_13974627.fa  chr20_14083167_14084282.fa  chr20_1444330_1446279.fa  chr20_15370716_15372514.fa  chr20_1575213_1576967.fa  chr20_16112151_16113224.fa  chr20_16341258_16343778.fa  chr20_1681181_1682213.fa  chr20_16832380_16833904.fa  chr20_16852028_16854617.fa  chr20_1688906_1691198.fa  chr20_16947414_16949607.fa  chr20_17202460_17203460.fa  chr20_17324416_17326603.fa  chr20_17404964_17407937.fa  chr20_18383256_18384901.fa  chr20_18388054_18390831.fa  chr20_18585659_18587381.fa  chr20_18708284_18710520.fa  chr20_19249962_19251073.fa  chr20_19287160_19289355.fa  chr20_20127481_20130326.fa  chr20_20165110_20167633.fa  chr20_20265635_20267968.fa  chr20_20397612_20400433.fa  chr20_22121418_22122589.fa  chr20_22188810_22191531.fa  chr20_22403148_22404794.fa  chr20_22497057_22499773.fa  chr20_2278332_2280708.fa  chr20_22906294_22908788.fa  (+176 more)
benchmark/fas/1/: chr20_10043505_10044872.fa  chr20_10262876_10265171.fa  chr20_10538965_10540232.fa  chr20_10921197_10923149.fa  chr20_11596878_11599706.fa  chr20_11648866_11650925.fa  chr20_1172826_1175431.fa  chr20_11990150_11991239.fa  chr20_11996320_11998343.fa  chr20_1261408_1262588.fa  chr20_13021673_13023769.fa  chr20_13328590_13330614.fa  chr20_13750647_13753070.fa  chr20_14255274_14256294.fa  chr20_14278920_14280350.fa  chr20_1508550_1511129.fa  chr20_15159613_15161221.fa  chr20_15164296_15166007.fa  chr20_15866914_15868171.fa  chr20_16044321_16045712.fa  chr20_17520690_17523557.fa  chr20_17904728_17906925.fa  chr20_18062688_18064265.fa  chr20_19431509_19433187.fa  chr20_19514094_19515343.fa  chr20_19823346_19824950.fa  chr20_21292878_21295830.fa  chr20_21317295_21318548.fa  chr20_22282380_22283429.fa  chr20_22493043_22494805.fa  chr20_22912395_22915205.fa  chr20_23406092_23408775.fa  chr20_23580801_23581810.fa  chr20_24140371_24142959.fa  chr20_2519249_2521676.fa  chr20_25858004_25860351.fa  chr20_26232703_26234929.fa  chr20_27009229_27011878.fa  chr20_27977914_27979241.fa  chr20_28086098_28087474.fa  (+66 more)
benchmark/fas/2/: chr20_11297686_11298759.fa  chr20_12493566_12496209.fa  chr20_12817209_12820043.fa  chr20_13574193_13576883.fa  chr20_13636473_13637790.fa  chr20_13751249_13752454.fa  chr20_14086263_14087689.fa  chr20_14255898_14258880.fa  chr20_14538504_14540773.fa  chr20_1551870_1553269.fa  chr20_16694673_16696959.fa  chr20_16727307_16729492.fa  chr20_17745800_17748778.fa  chr20_18389195_18390366.fa  chr20_1848711_1850476.fa  chr20_18936575_18939153.fa  chr20_19754747_19756349.fa  chr20_223022_225549.fa  chr20_22419707_22421972.fa  (+89 more)
benchmark/result/: benchmark_fas_1_chps.txt  benchmark_fas_2_chps.txt  benchmark_fas_3_chps.txt  benchmark_fas_4_chps.txt  benchmark_fas_5_chps.txt
benchmark/test_fas/: chr20_10748356_10751019.fa  chr20_10920657_10922515.fa  chr20_12070860_12072133.fa  chr20_12411633_12414319.fa  chr20_12831320_12833476.fa  chr20_13502614_13505127.fa  chr20_13559545_13561467.fa  chr20_14041285_14043655.fa  chr20_15366252_15368022.fa  chr20_17100441_17103140.fa  chr20_17587799_17589501.fa  chr20_17600492_17603407.fa  chr20_17899461_17900502.fa  chr20_19300360_19302642.fa  chr20_21302718_21304312.fa  chr20_2162753_2164165.fa  chr20_22548369_22549974.fa  chr20_2269716_2270774.fa  chr20_23613637_23615158.fa  chr20_24122821_24124880.fa  chr20_24204303_24205314.fa  chr20_25189802_25191365.fa  chr20_25292499_25293803.fa  chr20_27596727_27598551.fa  chr20_2802607_2803838.fa  chr20_29344297_29347205.fa  chr20_30324027_30326285.fa  chr20_31098450_31100717.fa  chr20_33534721_33537439.fa  chr20_33944307_33946354.fa  chr20_34902889_34905611.fa  chr20_36902282_36904506.fa  chr20_3758200_3759977.fa  chr20_37737796_37740734.fa  chr20_38767581_38768689.fa  chr20_39118192_39119260.fa  chr20_39559840_39561722.fa  chr20_40740691_40742983.fa  chr20_40755444_40756701.fa  chr20_42169915_42172757.fa  (+21 more)
benchmark/test_thread/: chr20_10119043_10120171.fa  chr20_10295968_10296987.fa
blat/darwin/: faToTwoBit  gfPcr  gfServer  isPcr
docs/: cli.md  conf.py  index.md  installation.md  reference.md  requirements.txt  tutorial.md  usage.md
docs/_static/: constom_font_example.css  extra_css.css
docs/_templates/: base.html
docs/tutorial_data/: 2bit.py  README.md  blat.py  improved_blat_example.py  query_context.py  query_general.py  query_result.py  test_case1.fa  test_ref.2bit  test_ref.fa
figures/: bench.py  benchmark_fas_all_chps.txt  f1_fas_len_ranges.tif  f2_performance.tif  fas_len.eps  fas_len.py  performance.tif  performance_table.tex  performance_table.tsv  plot.sh  range_600_hsps_table.tex  sup_table_performance_table.tex
scripts/: PxBLAT.ipynb  bench.py  creat_bench.py  generate_headers.py  plot.py
src/pxblat/: __init__.py  cli.py  parser.py  utils.py
src/pyblat/: __init__.py  parser.py  server.py  utils.py
tests/: conftest.py  test_basic.py  test_bittofa.py  test_cli.py  test_client.py  test_fatobit.py  test_gevent.py  test_options.py  test_pickle.py  test_result.py  test_server.py  test_status.py  test_twobit_to_fa.py
tests/data/: test_bit2fa_tmp.fa  test_case1_ground.psl  test_case2.fa
utils/: generate_headers.py  update.py
(+826 files in other folders)
